[gd_scene load_steps=63 format=3 uid="uid://b6ekbnpl2tcmd"]

[ext_resource type="Script" path="res://Scenes/Towers/Witch.gd" id="1_u4tww"]
[ext_resource type="Texture2D" uid="uid://beapmvjdbfv26" path="res://Assets/Animations/Witch/Character_color1/All/c00a_13magic.png" id="2_xdlwn"]
[ext_resource type="Texture2D" uid="uid://cj0avkugu5ccm" path="res://Assets/Animations/Witch/Character_color1/All/c00a_10swinging.png" id="3_tcjr5"]
[ext_resource type="Texture2D" uid="uid://bwanfox3opq74" path="res://Assets/Animations/Witch/Character_color1/All/c00a_01idle.png" id="4_bspqo"]
[ext_resource type="AudioStream" uid="uid://do1anl8twdyix" path="res://Assets/Sound/Towers/witch.wav" id="5_t38qf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kloud"]
atlas = ExtResource("2_xdlwn")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywdot"]
atlas = ExtResource("2_xdlwn")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwdoy"]
atlas = ExtResource("2_xdlwn")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8umn"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3b11"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1920, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_22eon"]
atlas = ExtResource("2_xdlwn")
region = Rect2(0, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qtfl"]
atlas = ExtResource("2_xdlwn")
region = Rect2(480, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_36uio"]
atlas = ExtResource("2_xdlwn")
region = Rect2(960, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_sytly"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1440, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn2s0"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1920, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_wscsp"]
atlas = ExtResource("2_xdlwn")
region = Rect2(0, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb7da"]
atlas = ExtResource("2_xdlwn")
region = Rect2(480, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm6cc"]
atlas = ExtResource("2_xdlwn")
region = Rect2(960, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhyfc"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1440, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nw6m"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1920, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjd61"]
atlas = ExtResource("2_xdlwn")
region = Rect2(0, 1440, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlylm"]
atlas = ExtResource("2_xdlwn")
region = Rect2(480, 1440, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_fce8o"]
atlas = ExtResource("2_xdlwn")
region = Rect2(960, 1440, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw0k1"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1440, 1440, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd2l7"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1920, 1440, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u2c4"]
atlas = ExtResource("2_xdlwn")
region = Rect2(0, 1920, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_t45ec"]
atlas = ExtResource("2_xdlwn")
region = Rect2(480, 1920, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxdjv"]
atlas = ExtResource("2_xdlwn")
region = Rect2(960, 1920, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7pcv"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1440, 1920, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr2g0"]
atlas = ExtResource("2_xdlwn")
region = Rect2(1920, 1920, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_im8my"]
atlas = ExtResource("3_tcjr5")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmwnv"]
atlas = ExtResource("3_tcjr5")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnfao"]
atlas = ExtResource("3_tcjr5")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_yufl5"]
atlas = ExtResource("3_tcjr5")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyix7"]
atlas = ExtResource("3_tcjr5")
region = Rect2(1920, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_d162g"]
atlas = ExtResource("3_tcjr5")
region = Rect2(0, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_emt53"]
atlas = ExtResource("3_tcjr5")
region = Rect2(480, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_3exl3"]
atlas = ExtResource("3_tcjr5")
region = Rect2(960, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5si2"]
atlas = ExtResource("3_tcjr5")
region = Rect2(1440, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce2fw"]
atlas = ExtResource("3_tcjr5")
region = Rect2(1920, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_f67wn"]
atlas = ExtResource("3_tcjr5")
region = Rect2(0, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpc4k"]
atlas = ExtResource("3_tcjr5")
region = Rect2(480, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6kp5"]
atlas = ExtResource("3_tcjr5")
region = Rect2(960, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2tok"]
atlas = ExtResource("3_tcjr5")
region = Rect2(1440, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_37a1f"]
atlas = ExtResource("3_tcjr5")
region = Rect2(1920, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cj6r"]
atlas = ExtResource("3_tcjr5")
region = Rect2(0, 1440, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_ras8p"]
atlas = ExtResource("4_bspqo")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_55unc"]
atlas = ExtResource("4_bspqo")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_w76bw"]
atlas = ExtResource("4_bspqo")
region = Rect2(960, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_crxvh"]
atlas = ExtResource("4_bspqo")
region = Rect2(1440, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuof2"]
atlas = ExtResource("4_bspqo")
region = Rect2(1920, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1y7e"]
atlas = ExtResource("4_bspqo")
region = Rect2(0, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_2exr6"]
atlas = ExtResource("4_bspqo")
region = Rect2(480, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfgp5"]
atlas = ExtResource("4_bspqo")
region = Rect2(960, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1plj"]
atlas = ExtResource("4_bspqo")
region = Rect2(1440, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tjvb"]
atlas = ExtResource("4_bspqo")
region = Rect2(1920, 480, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_cayqa"]
atlas = ExtResource("4_bspqo")
region = Rect2(0, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgtji"]
atlas = ExtResource("4_bspqo")
region = Rect2(480, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnp55"]
atlas = ExtResource("4_bspqo")
region = Rect2(960, 960, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6364"]
atlas = ExtResource("4_bspqo")
region = Rect2(1440, 960, 480, 480)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7lo4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kloud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywdot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwdoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8umn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3b11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22eon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qtfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36uio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sytly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn2s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wscsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb7da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm6cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhyfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjd61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlylm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fce8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd2l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u2c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t45ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxdjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7pcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr2g0")
}],
"loop": false,
"name": &"attack",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_im8my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmwnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnfao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yufl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyix7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d162g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emt53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3exl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5si2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce2fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f67wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpc4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6kp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2tok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37a1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cj6r")
}],
"loop": true,
"name": &"attack1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ras8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55unc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w76bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crxvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuof2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1y7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2exr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfgp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1plj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tjvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cayqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgtji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnp55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6364")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ajqv"]
radius = 500.0

[node name="Witch" type="StaticBody2D"]
script = ExtResource("1_u4tww")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_q7lo4")
animation = &"attack"

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_3ajqv")
one_way_collision_margin = 0.0

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -80.0
offset_top = -67.0
offset_right = 72.0
offset_bottom = 67.0
metadata/_edit_use_anchors_ = true

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_t38qf")
volume_db = -12.0
pitch_scale = 1.1

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
